# automated-scouting-system-frontend

./: .env.example  .gitignore  start.sh
backend/: config.py  main.py  pyproject.toml
backend/routers/: models.py  results.py  tba.py  tracking.py  video.py
backend/services/: heatmap_service.py  scoring_service.py  tba_service.py  tracking_service.py  video_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  store.ts  types.ts
frontend/src/lib/components/: AnnotationCanvas.svelte  ReidentifyModal.svelte  ResultsView.svelte  SetupStep.svelte  TrackingStep.svelte  VideoStep.svelte
